Prevent horizontal scrolling for sections with large backgrounds (#2033)

--- a/packages/website_v2/src/components/Footer/Footer.scss
+++ b/packages/website_v2/src/components/Footer/Footer.scss
@@ -7,6 +7,7 @@
   padding: 24px 51px;
   background-color: #070b37;
   position: relative;
+  overflow: hidden;
 
   @media screen and (max-width: 768px) {
     text-align: center;
