--- a/packages/website_v2/src/components/TeamPage/TeamPage.scss
+++ b/packages/website_v2/src/components/TeamPage/TeamPage.scss
@@ -13,7 +13,7 @@
     background-size: cover;
     height: 507px;
     position: relative;
-    z-index: -1;
+    overflow: hidden;
 
     &::before {
       content: ' ';
